dropdown overlap issue resolved

--- a/frontend/src/styles/components/header.css
+++ b/frontend/src/styles/components/header.css
@@ -12,7 +12,7 @@
 .header-container {
   max-width: 1200px;
   margin: auto;
-  padding: 15px 0px;
+  padding: 8px 0px;
 
   display: flex;
   align-items: center;
@@ -65,7 +65,7 @@
   display: inline-flex;
   gap: 8px;
   align-items: center;
-  padding-bottom: 4px;
+  padding: 15px 0 15px;
   font-size: 16px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
